--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="question">
         <ul>
           <li>Naam:</li>
-          <li>geboortedatum:</li>
-          <li>adres:</li>
+          <li>Geboortedatum:</li>
+          <li>Adres:</li>
           <li>Email:</li>
         </ul>
       </div>
