--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li>Naam:</li>
           <li>Geboortedatum:</li>
           <li>Adres:</li>
+          <li><br></li>
           <li>Email:</li>
         </ul>
       </div>
@@ -31,10 +32,19 @@
         <ul>
           <li>Mark Salaets</li>
           <li>30/12/1990</li>
-          <li>Lavendelstraat 13, 3600 GENK</li>
+          <li>Lavendelstraat 13</li>
+          <li>3600 GENK</li>
           <li>mark.j.salaets@gmail.com</li>
         </ul>
       </div>
+      <div class="links">
+        <a href="https://mark-salaets.github.io/Mijn-CV/website-cv/">CV</a>
+        <a>website</a>
+        <a>portfolio</a>
+      </div>
+
     </div>
+
+
   </body>
 </html>
